<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText android:id="@+id/name" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/name" />
    <EditText android:id="@+id/value" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/value"
        android:importantForAutofill="no" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/valueLength" android:layout_width="0dp"
            android:layout_weight="1" android:layout_height="wrap_content"
            android:inputType="number" android:text="32" />
        <Button android:id="@+id/generate" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/action_generate" />
    </LinearLayout>
    <EditText android:id="@+id/note" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/note" />
    <EditText android:id="@+id/tags" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/tags" />
    <Button android:id="@+id/save" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/action_save" />
    <Button android:id="@+id/delete" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/action_delete"
        android:visibility="gone" />
</LinearLayout>
